# qbiff-svn

qbiff-head/: .certinstall  .doit  .make  Makefile  button.cpp  button.h  client  clientfolder.cpp  clientfolder.h  clientinfo.cpp  clientinfo.h  config.h  notify.cpp  notify.h  parser.cpp  parser.h  qbiff  qbiff-client  qbiff-server  qbiff.cpp  qbiff.pro  readmail.local  readmail.ssh  serverhandler.cpp  serverhandler.h  sslclient.cpp  sslclient.h  sslcommon.cpp  sslcommon.h  sslconnection.cpp  sslconnection.h  sslinit.cpp  sslinit.h  sslserver.cpp  sslserver.h
qbiff-head/cert-client/: Makefile  client.cnf  client.pem  clientcert.pem  clientkey.pem  clientreq.pem  root.srl
qbiff-head/cert-server/: Makefile  dh1024.pem  dh512.pem  root.cnf  root.pem  root.srl  rootcert.pem  rootkey.pem  rootreq.pem  server.cnf  server.pem  serverCA.cnf  serverCA.pem  serverCA.srl  serverCAcert.pem  serverCAkey.pem  serverCAreq.pem  servercert.pem  serverkey.pem  serverreq.pem
qbiff-head/init.d/: qbiff  qbiffd
qbiff-head/pixmaps/: shape.xpm
qbiff-head/rpm/: qbiff.changes  qbiff.dif  qbiff.spec  qbiff.sysconfig
qbiff-head/test/: stunnel
qbiff-head/wallet/: CMakeLists.txt
qbiff-head/wallet/src/: main.cpp
